--- a/Rechner und Programme/Druckervergleich_Schülervorlage.html
+++ b/Rechner und Programme/Druckervergleich_Schülervorlage.html
@@ -27,6 +27,7 @@
                 <input id="idKostenProSeiteSmart" class="form-control" type="text" value="0.08" placeholder="in €">
             </div>
             <button type="button" class="btn btn-primary" onclick="fDruck();">Kalkuliere!</button>
+		 <a href="../index.html">Zurück zur Startseite</a>
         </form>
         <div class="mt-4" id="idAusgabe"></div>
     </div>
