--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href="Rechner und Programme/Multi Taschenrechner.html"  target="blank">Multitaschenrechner</a></li>
                 <li><a href="Rechner und Programme/collatz.html"  target="blank">Collatz-Problem</a></li>
                 <li><a href="Rechner und Programme/fibo.html"  target="blank">Fibonacci</a></li>
+                <li><a href="Rechner und Programme/_tilgung-Lösung.html"  target="blank">Tilgungsrechner</a></li>
                 <li><a href="Rechner und Programme/Druckervergleich.html"  target="blank">Druckervergleich</a></li>
             </ul>
         </section>
